# simple_web_app

./: README.md
src/devops/: Dockerfile  db.sqlite3  fly.toml  pyproject.toml
src/devops/contacts/: models.py  urls.py  views.py
src/devops/contacts/migrations/: 0001_initial.py  0002_alter_contact_number.py
src/devops/contacts/static/: main.css
src/devops/contacts/templates/: index.html
src/devops/devops/: settings.py  urls.py
