[tool.poetry]
name = "devops"
version = "0.1.0"
description = ""
authors = ["Valtteri Ahola <valtteri.ahola@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
